--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -135,7 +135,7 @@
     }
     .left .logo-container h1 a{
         /* font-size: 1.4rem; */
-        margin-left: 2rem;
+        margin-left: 3rem;
     }
     .left .fa-solid{
         font-size:2rem;
